# famex

./: .flake8  .gitignore  .pre-commit-config.yaml  ANALYSIS_REPORT.md  ANALYSIS_SUMMARY.md  ASE_UNITS_INTEGRATION.md  INSTALL.md  LICENSE  MANIFEST.in  QUICK_WINS.md  README.md  README_ANALYSIS.md  README_ANALYSIS.md.backup  REFACTORING_ACTION_PLAN.txt  REFACTORING_GUIDE.md  SECURITY.md  THERMOCHEMISTRY_ENHANCEMENTS.md  UMA_HESSIAN_IMPLEMENTATION.md  action_plan_2_irc_implementation.txt  action_plan_3_complete_neb_implementation.txt  debug_ci.py  debug_forces.py  diagnose_uma_hessian.py  example_run_results.md  example_test_results.md  implementation_order_analysis.txt  initial_structure.xyz  mypy_ignore_analysis.md  optimized_structure.xyz  pyproject.toml  qme_simple.py  refactor-uma-hessian.plan.md  requirements.txt  run_improved_tests.py  run_tests.sh  setup.py  test_mace_conflict.py  test_mkl_fix.py  test_new_mock.py  test_option3.py  (+2 more)
.github/workflows/: ci.yml  publish.yml  quick-test.yml
docs/: DOCUMENTATION_IMPROVEMENT_SUMMARY.md  FAQ.md  README.md  TORCHSIM_INTEGRATION.md  TRIC_MATH_FIXES.md  TUTORIALS.md  USER_GUIDE.md  getting_started.md  growing_string_method.md  index.md
docs/benchmarks/: bh28.md  index.md
docs/developer_guide/: BACKEND_INTEGRATION_ANALYSIS.md  adding_backends.md  backend_testing_with_warnings.md  code_style.md  contributing.md  creating_custom_strategies.md  index.md  torchsim_batch_implementation.md  torchsim_integration.md
docs/reference/: faq.md  index.md  troubleshooting.md
docs/tutorials/: basic_optimization.md  index.md  transition_states.md
docs/user_guide/: backends.md  cli_reference.md  index.md  torchsim_acceleration.md
examples/: CI-NEB_IMPLEMENTATION_SUMMARY.md  EXAMPLES_REVIEW_FINDINGS.md  HESSIAN_BENCHMARK_PROPOSAL.md  README.md  README_TEMPLATE.md  README_timing_benchmark.md  TWO_ENDED_STRATEGIES_GUIDE.md  adaptive_hessian_demo.py  ase_units_example.py  backend_utils.py  bh28_benchmark.py  cineb_example.py  cli_demo.py  cli_demo_README.md  common_interface.py  demo.py  device_utils.py  enhanced_demo.py  example_test_results.md  geodesic_demo.py  growing_string_demo.py  h2_dissociation_demo.py  hessian_accuracy_comparison.py  hessian_benchmark.py  hessian_method_comparison_base.py  irc_demo.py  mace_hessian_method_comparison.py  methane.xyz  minima_optimizer_benchmark.py  minima_optimizer_benchmark_results.json  optimizer_comparison_README.md  optimizer_comparison_benchmark.py  optimizer_comparison_benchmark_results.json  optimizer_comparison_results.json  optimizer_verbosity_demo.py  profiling_example.py  reaction_minima_optimizer_benchmark.py  reaction_ts_optimizer_benchmark.py  richardson_diagnostic.py  sn2_reaction_demo.py  (+13 more)
examples/benchmark_results/: bh28_benchmark_results.json  comprehensive_benchmark_results.json
examples/bh28_benchmark/: README.md  bh28_benchmark.py  run_all_backends.py
examples/example_files/: A_C_A_B_A_C_product.xyz  A_C_A_B_A_C_reactant.xyz  irc_uma.xyz  reaction_001_product.xyz  reaction_001_reactant.xyz  reaction_001_ts.irc.xyz  reaction_001_ts.xyz  test_cineb_refactored.xyz  test_neb_low_spring.xyz  test_neb_refactored.xyz  test_neb_uma.xyz  test_neb_very_low_spring.xyz
examples/zimmermann93_benchmark/: README.md  zimmermann93_benchmark.py
famex/: __init__.py
famex/analysis/: __init__.py  ase_integration.py  frequency.py  hessian.py  hessian_comparison.py  hessian_energy.py  noise_estimation.py  normal_modes.py  quasiharmonic.py  solvation.py  thermodynamics.py  validation.py
famex/backends/: __init__.py  availability.py  cache.py  constants.py  dependencies.py  registry.py
famex/cli/: __init__.py  cache_commands.py  cli.py  cli_helpers.py
famex/constraints/: __init__.py  constraints.py  parser.py
famex/core/: __init__.py  base_strategy.py  calculator_manager.py  charge_spin.py  constraint_manager.py  exceptions.py  explorer.py  file_io.py  protocols.py  registry.py
famex/example_utils/: __init__.py
famex/interpolation/: __init__.py  strategies.py
famex/io/: __init__.py  geometry.py  path_manager.py  xyz_io.py
famex/optimizers/: __init__.py  ase_wrappers.py  rfo_optimizer.py  scipy_optimizers.py
famex/potentials/: __init__.py  _load_utils.py  aimnet2_potential.py  base_potential.py  mace_potential.py  orb_potential.py  pet_potential.py  so3lr_potential.py  tblite_potential.py  uma_potential.py
famex/strategies/: __init__.py  growing_string.py  helpers.py  irc.py  minima.py  minima_interpolate.py  neb.py  ts.py  (+4 more)
qme/: __init__.py  aimnet2_potential.py  backend_availability.py  calculator_registry.py  calculator_setup.py  cli.py  cli_helpers.py  config.py  constraints.py  core.py  dependencies.py  frequency.py  geometry.py  logging_utils.py  mace_potential.py  mlp_calculator.py  mock_calculator.py  reaction.py  settings.py  so3lr_potential.py  test.py  uma_potential.py
scripts/: benchmark_uma_hessian_speed.py  clean_hessian_benchmark.py  demo_uma_analytical_hessian.py  gpu_hessian_benchmark.py  run_bh28_ts_comparison.py  test_uma_frequency.py  validate_uma_hessian.py
tests/: README.md  __init__.py  backend_test_helpers.py  backend_utils.py  conftest.py  debug_qme_import.py  test_aimnet2.py  test_all_backends.py  test_backend_aimnet2.py  test_backend_mock.py  test_backend_so3lr.py  test_backend_uma.py  test_backends_min_ts.py  test_calculators.py  test_ci_cd_integration.py  test_cli.py  test_comprehensive_optimization.py  test_constants.py  test_constraints.py  test_cross_backend.py  test_diels_alder_reaction.py  test_frequencies.py  test_geometric_optimizer.py  test_geometry.py  test_integration.py  test_minima_optimization.py  test_molecular_optimization.py  test_new_classes.py  test_package_deps.py  test_proton_transfer_reaction.py  test_qme.py  test_reaction.py  test_reactions.py  test_sn2_reaction.py  test_so3lr.py  test_torchsim_integration.py  test_torchsim_sanity_check.py  test_toy_reactions.py  test_transition_states.py  test_utils.py  (+1 more)
vib/: cache.0y+.json  cache.0y-.json  cache.0z+.json  cache.0z-.json  cache.1x+.json  cache.1x-.json  cache.eq.json
(+596 files in other folders)
