[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qme-ml"
version = "0.1.0"
description = "Quick mechanistic exploration using machine learning potentials with Sella and geomeTRIC optimizers"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "rlaplaza-lab", email = "example@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "ase>=3.22.0",
    "numpy>=1.20.0",
    "click>=8.0.0",
    "requests>=2.25.0",
    "sella>=2.0.0",
    "geometric>=1.1.0",
]

[project.optional-dependencies]
# Individual backend installations to avoid dependency conflicts
uma = [
    "torch>=2.0.0",
    "fairchem-core>=1.0.0",
    "torch-cluster>=0.6.0",
]
aimnet2 = [
    "torch>=2.0.0",
]
mace = [
    "torch>=2.0.0",
    "mace-torch>=0.1.0",
    # Note: mace-torch requires e3nn==0.4.4, conflicts with fairchem-core
]
so3lr = [
    "jax>=0.4.20",
    # Note: so3lr must be installed separately from source
]
# Orb universal forcefield (large package, may have compatibility issues)
orb = [
    "torch>=2.0.0",
    "orb-models>=0.5.0",
]
# TorchSim acceleration (requires Python 3.11+)
torchsim = [
    "torch-sim-atomistic>=0.3.0; python_version>='3.11'",
]
# Legacy combined installation (may have conflicts)
ml = [
    "torch>=2.0.0",
    "fairchem-core>=1.0.0",
    "torch-cluster>=0.6.0",
    "mace-torch>=0.1.0",
    "jax>=0.4.20",
]
# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-requests>=2.25.0",
]

[project.scripts]
qme = "qme.cli:main"

[project.urls]
Homepage = "https://github.com/rlaplaza-lab/qme"
Repository = "https://github.com/rlaplaza-lab/qme"

[tool.setuptools.packages.find]
include = ["qme*"]

[tool.setuptools.package-data]
qme = ["*.yml", "*.yaml", "*.json"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    ".venv",
    "venv",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "PIE", # flake8-pie
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "E203",  # whitespace before ':' (conflicts with black)
    "T201",  # print statements (allow in tests and examples)
    "B904",  # raise without from (allow for now)
    "N806",  # variable names like kT, OptClass are intentional (physics/CS conventions)
    "SIM105",  # contextlib.suppress is not always clearer than try-except-pass
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
exclude = [
    "build/",
    "dist/",
    ".*egg-info/",
    ".venv/",
    "venv/",
]

# Relax strictness for tests and examples
[[tool.mypy.overrides]]
module = ["tests.*", "examples.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false

# Ignore missing imports for external libraries without stubs
[[tool.mypy.overrides]]
module = [
    "geometric.*",
    "torch_sim.*",
    "e3nn.*",
    "orb_models.*",
    "fairchem.*",
    "so3lr.*",
    "mace.*",
    "sella.*",
]
ignore_missing_imports = true
