[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "famex"
version = "0.2.1"
description = "Fast mechanistic explorer using machine learning potentials with Sella optimizer"
readme = "README.md"
requires-python = ">=3.10"
# Note: Python 3.10+ required for all backends
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "rlaplaza-lab"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "ase>=3.22.0",
    "numpy>=2.0.0",
    "click>=8.0.0",
    "requests>=2.25.0",
    "sella>=2.0.0",
]

[project.optional-dependencies]
# Development dependencies only
# ML backends must be installed separately - see README for details
uma = ["fairchem-core>=2.21.0"]
pet = ["upet"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff~=0.14.5",
    "mypy>=1.0.0",
    "types-requests>=2.25.0",
    "types-tqdm>=4.66.0",
]

[project.scripts]
famex = "famex.cli:main"

[project.urls]
Homepage = "https://github.com/rlaplaza-lab/famex"
Repository = "https://github.com/rlaplaza-lab/famex"
Documentation = "https://github.com/rlaplaza-lab/famex/tree/main/docs"
Issues = "https://github.com/rlaplaza-lab/famex/issues"

[tool.setuptools.packages.find]
include = ["famex*"]

[tool.setuptools.package-data]
famex = ["*.yml", "*.yaml", "*.json"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["famex"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/build/*",
    "*/dist/*",
    "*/.*egg-info/*",
    "*/examples/*",
    "*/example_utils/*",
    # Optional backend potentials with low/no test coverage
    "*/potentials/orb_potential.py",
    "*/potentials/so3lr_potential.py",
    "*/potentials/tblite_potential.py",
    "*/potentials/uma_potential.py",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@property",
    "@.*\\.setter",
    "if False:",
    "if .*TYPE_CHECKING.*:",
]
precision = 2
show_missing = true
skip_covered = false
skip_empty = false
fail_under = 70

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    ".venv",
    "venv",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "PIE", # flake8-pie
    "SIM", # flake8-simplify
    "D",  # pydocstyle
]
ignore = [
    "E501",  # line too long (handled by black)
    "E203",  # whitespace before ':' (conflicts with black)
    "T201",  # print statements (allow in tests and examples)
    "B904",  # raise without from (allow for now)
    "N806",  # variable names like kT, OptClass are intentional (physics/CS conventions)
    "SIM102",  # nested ifs are sometimes clearer than combined conditions
    "SIM105",  # contextlib.suppress is not always clearer than try-except-pass
    "SIM108",  # ternary operators are not always clearer than if-else blocks
    "D100",  # Missing docstring in public module
    "D101",  # Missing docstring in public class
    "D102",  # Missing docstring in public method
    "D103",  # Missing docstring in public function
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method
    "D107",  # Missing docstring in __init__
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"  # Standardize on NumPy-style docstrings

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
exclude = [
    "build/",
    "dist/",
    ".*egg-info/",
    ".venv/",
    "venv/",
    "hessian_issues/",
    "tests/",
    "examples/",
]

# Tests and examples are excluded from mypy checks (see exclude list above)
# This is standard practice for CI/CD - only the main package is type-checked

# Ignore missing imports for external libraries without stubs
[[tool.mypy.overrides]]
module = [
    "geometric.*",
    "e3nn.*",
    "orb_models.*",
    "fairchem.*",
    "so3lr.*",
    "mace.*",
    "sella.*",
    "tblite.*",
    "torch_cluster.*",
]
ignore_missing_imports = true
